parser/parser_tests/tests_input/unit/good/Good06.ty
mutable class Student { 
    values: {
        age: Int = 3;
        firstName: String;
        lastName: String;
    }
}
