parser/parser_tests/tests_input/unit/bad/Bad03.ty
mutable class Student { 
    values: {
        age: Int = 3,
        firstName: String
        lastName: String
    }
    
    variables: numberOfClasses: Int, year: Int
}
